--- a/web/index.html
+++ b/web/index.html
@@ -60,11 +60,13 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars" aria-hidden="true"></i></a>
                             <ul id="gbl-setting" class="dropdown-menu">
                                 <li><a href="#" class="loggable"><i class="fa fa-comment-o fa-lg"></i> log</a></li>
-                                <li><a href="#"><i class="fa fa-gear fa-lg"></i> 设置2</a></li>
-                                <li><a href="#"><i class="fa fa-gear fa-lg"></i> 设置3</a></li>
-                                <li><a href="#"><i class="fa fa-gear fa-lg"></i> ...</a></li>
+                                <li><a href="#" data-localize="index.setting.comm" data-replace="right"><i class="fa fa-link fa-lg"></i> </a></li>
+                                <li><a href="#" data-localize="index.setting.splice" data-replace="right"><i class="fa fa-th fa-lg"></i> </a></li>
+                                <li><a href="#" data-localize="index.setting.software" data-replace="right"><i class="fa fa-cube fa-lg"></i> </a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header"><i class="fa fa-language text-danger"></i>&nbsp;Language</li>
+                                <li class="dropdown-header" data-localize="index.setting.help" data-replace="right"><i class="fa fa-language text-danger"></i></li>
+                                <li><a href="#" data-localize="index.setting.user_manual" data-replace="right"><i class="fa fa-book fa-lg"></i> </a></li>
+                                <li><a href="#" data-localize="index.setting.version_info" data-replace="right" data-toggle="modal" data-target=".version_info"><i class="fa fa-info-circle fa-lg"></i> </a></li>
                                 <li><a href="#" class="zh-CN"><i class="fa fa-rmb"></i> 简体中文</a></li>
                                 <li><a href="#" class="en-US"><i class="fa fa-usd"></i> English</a></li>
                             </ul>
@@ -505,6 +507,25 @@
     </div>
 </div>
 
+<!--版本信息-->
+<div class="modal fade version_info" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" data-localize="index.setting.version_info"></h4>
+            </div>
+            <div class="modal-body">
+                <h1>Skyworth 创维群欣</h1>
+                <p>产品名称：创维群欣智能拼接控制系统</p>
+                <p>文件版本：</p>
+                <p>控制器版本：</p>
+                <p>版权所有：&copy;深圳创维群欣安防科技有限公司。保留所有权</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!--js包-->
 <script src="lib/modernizr.min.js" type="text/javascript"></script>
 <script src="lib/jquery-2.1.4.min.js"></script>
@@ -529,21 +550,6 @@
 $(function() {
 
     var app = new SkyApp();
-
-//    var deletePromise = $.indexedDB("MyECommerceSite").deleteDatabase();
-//
-//    deletePromise.done(function (db, event) {
-//        /* Called when the delete is successful*/
-//        console.log('del done')
-//    });
-//    deletePromise.fail(function (error, event) {
-//        /* Called when the delete is successful*/
-//        console.log('del fail')
-//    });
-//    deletePromise.progress(function (db, event) {
-//        // Called when the deleting is blocked due to another transaction
-//        console.log('del progress')
-//    });
 
 });
 </script>
