--- a/web/index.html
+++ b/web/index.html
@@ -13,12 +13,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!--<link rel="icon" href="favicon.ico">-->
+    <meta name="description" content="拼接控制 splice">
+    <meta name="author" content="skyworth 创维群欣">
+    <link rel="icon" href="favicon.ico">
     <title data-localize="index.title"></title>
 
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="lib/bootstrap-select/css/bootstrap-select.min.css" rel="stylesheet">
+    <link href="lib/bootstrap-slider/css/slider.css" rel="stylesheet">
     <link href="lib/messenger/css/messenger.css" rel="stylesheet">
     <link href="lib/messenger/css/messenger-theme-flat.css" rel="stylesheet">
     <link href="lib/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
@@ -56,7 +58,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#" id="synchronize" data-localize="index.select.synchronize" data-replace="right"><i class="fa fa-refresh" aria-hidden="true"></i> </a></li>
+                        <li><a href="#" id="synchronize" data-localize="index.btn.synchronize" data-replace="right"><i class="fa fa-refresh" aria-hidden="true"></i> </a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars" aria-hidden="true"></i></a>
                             <ul id="gbl-setting" class="dropdown-menu">
@@ -73,7 +75,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-center">
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-localize="index.select.screen" data-replace="left"> <i class="fa fa-caret-down"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-localize="index.btn.screen" data-replace="left"> <i class="fa fa-caret-down"></i></a>
                             <ul id="wall-toggle" class="dropdown-menu">
                                 <li><a href="#screen-wall-one" role="tab" data-toggle="tab">1</a></li>
                                 <li><a href="#screen-wall-two" role="tab" data-toggle="tab">2</a></li>
@@ -508,14 +510,72 @@
 
 <!--通信设置-->
 <div id="comm_setting" class="modal fade communication" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" data-localize="index.setting.comm"></h4>
+                <h4 class="modal-title" data-localize="index.setting.comm.title"></h4>
             </div>
             <div class="modal-body">
-
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active"><a href="#comm_ip" role="tab" data-toggle="tab" data-localize="index.setting.comm.network"></a></li>
+                    <li role="presentation"><a href="#comm_com" role="tab" data-toggle="tab" data-localize="index.setting.comm.com"></a></li>
+                </ul>
+                <!-- Tab panes -->
+                <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane fade in active" id="comm_ip">
+                        <br>
+                        <form class="form-horizontal">
+                            <div class="form-group">
+                                <label for="ip_addr" class="col-sm-4 control-label"  data-localize="index.setting.comm.ip"></label>
+                                <div class="col-sm-8">
+                                    <input type="text" id="ip_addr" class="form-control" placeholder="ip">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="ip_port" class="col-sm-4 control-label"  data-localize="index.setting.comm.port"></label>
+                                <div class="col-sm-8">
+                                    <select id="ip_port" class="selectpicker form-control" data-style="btn-info">
+                                        <option>5000</option>
+                                        <option>5100</option>
+                                        <option>5200</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="comm_com">
+                        <br>
+                        <form class="form-horizontal">
+                            <div class="form-group">
+                                <label for="comm_port" class="col-sm-4 control-label"  data-localize="index.setting.comm.com_port"></label>
+                                <div class="col-sm-8">
+                                    <select id="comm_port" class="selectpicker form-control" data-style="btn-info">
+                                        <option>com1</option>
+                                        <option>com2</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="com_baud_rate" class="col-sm-4 control-label"  data-localize="index.setting.comm.baud_rate"></label>
+                                <div class="col-sm-8">
+                                    <select id="com_baud_rate" class="selectpicker form-control" data-style="btn-info">
+                                        <option>9600</option>
+                                        <option>115200</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-primary" data-localize="index.btn.auto_recognition"></button>
+                    <button type="button" class="btn btn-primary" data-localize="index.btn.confirm"></button>
+                    <button type="button" class="btn btn-primary" data-localize="index.btn.cancel" data-dismiss="modal"></button>
+                </div>
             </div>
         </div>
     </div>
@@ -530,7 +590,35 @@
                 <h4 class="modal-title" data-localize="index.setting.splice"></h4>
             </div>
             <div class="modal-body">
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active"><a href="#screen_1" role="tab" data-toggle="tab" data-localize="index.setting.splice.screen1"></a></li>
+                    <li role="presentation"><a href="#screen_2" role="tab" data-toggle="tab" data-localize="index.setting.splice.screen2"></a></li>
+                    <li role="presentation"><a href="#screen_3" role="tab" data-toggle="tab" data-localize="index.setting.splice.screen3"></a></li>
+                    <li role="presentation"><a href="#screen_4" role="tab" data-toggle="tab" data-localize="index.setting.splice.screen4"></a></li>
+                </ul>
+                <!-- Tab panes -->
+                <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane fade in active" id="screen_1">
+                        <div class="sky-tag"><span class="word" data-localize="index.setting.splice.resolution"></span></div>
+                        <input type="text" id="resolution_slider" class="span2" value="">
+                        <div class="sky-tag"><span class="word" data-localize="index.setting.splice.IMS"></span></div>
 
+                        <div class="sky-tag"><span class="word" data-localize="index.setting.splice.param"></span></div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="screen_2">
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="screen_3">
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="screen_4">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-localize="index.btn.synchronize"></button>
+                <button type="button" class="btn btn-primary" data-localize="index.btn.confirm"></button>
+                <button type="button" class="btn btn-primary" data-localize="index.btn.cancel" data-dismiss="modal"></button>
+                <button type="button" class="btn btn-primary" data-localize="index.btn.apply"></button>
             </div>
         </div>
     </div>
@@ -626,6 +714,8 @@
 
 <script src="lib/i18n/jquery.i18n.properties.js"></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="lib/bootstrap-select/js/bootstrap-select.min.js"></script>
+<script src="lib/bootstrap-slider/js/bootstrap-slider.js"></script>
 <script src="lib/messenger/js/messenger.min.js"></script>
 <script src="lib/messenger/js/messenger-theme-flat.js"></script>
 <script src="lib/jquery-mousewheel/jquery.mousewheel.js" type="text/javascript"></script>
@@ -645,7 +735,15 @@ $(function() {
 
     var app = new SkyApp();
 
-
+    var slider = $('#resolution_slider').slider({
+        min: 0,
+        max: 100,
+        value: 10,
+        tooltip: 'hide'
+    })
+    slider.on('slide', function(){
+        console.log(11)
+    });
 });
 </script>
 </body>
